--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,7 +71,7 @@
     "graphql": "^16.12.0",
     "graphql-request": "^7.4.0",
     "html-react-parser": "^5.2.15",
-    "isomorphic-dompurify": "^2.35.0",
+    "dompurify": "^3.2.4",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
