--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,7 @@
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@tanstack/react-table": "^8.21.3",
+    "@vercel/react-router": "^1.2.5",
     "canvas-confetti": "^1.9.4",
     "gql-generated": "workspace:*",
     "graphql": "^16.12.0",
