--- a/apps/business/package.json
+++ b/apps/business/package.json
@@ -12,8 +12,9 @@
     "@hookform/resolvers": "^4.1.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
-    "@stripe/stripe-js": "^5.10.0",
     "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.10.0",
+    "@vercel/react-router": "^1.2.5",
     "gql-generated": "workspace:*",
     "graphql": "^16.12.0",
     "isbot": "^5.1.31",
