--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,6 +17,7 @@
     "canvas-confetti": "^1.9.4",
     "gql-generated": "workspace:*",
     "graphql": "^16.12.0",
+    "html-react-parser": "^5.2.15",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
