--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "cookie": "^1.1.1",
     "gql-generated": "workspace:*",
     "graphql": "^16.12.0",
+    "html-react-parser": "^5.2.15",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
