--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -106,6 +106,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/turndown": "^5.0.5",
+    "@types/canvas-confetti": "^1.9.0",
     "typescript": "^5.9.2"
   }
 }
