--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,6 +76,7 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
+    "pdf-lib": "latest",
     "pino": "^10.3.0",
     "react": "^19.2.4",
     "react-day-picker": "8.10.1",
